--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -35,7 +35,7 @@ jobs:
           static_site_generator: next
 
       - name: Build with Next.js 🏗️
-        run: mkdir -p out && yarn run build
+        run: mkdir -p out && yarn run build && ls -al out
 
       - name: Upload artifact 📡
         uses: actions/upload-pages-artifact@v3
